--- a/templates/game.html
+++ b/templates/game.html
@@ -18,6 +18,6 @@
     <div id="gameContainer"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
-    <script src="{{ url_for('static', filename='js/multiplayer.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 </body>
 </html>
